# diabetes-predictor

./: Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  train_model.py
.github/workflows/: docker-publish.yaml
app/: main.py
models/: diabetes_model.pkl
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html  result.html
