[project]
name = "diabetes-progression-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.34.3",
]
